<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CurrentFragment"
   >
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:text="@string/user"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@id/welcome"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/location_here"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcome" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:backgroundTint="@color/white"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toEndOf="@id/location"
                    app:layout_constraintTop_toBottomOf="@id/welcome" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/cardview_bg"
                    android:elevation="20dp"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="20dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/weather_report"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/for_today"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/text1" />


                    <ImageView
                        android:id="@+id/iv_condition"
                        android:layout_width="match_parent"
                        android:contentDescription="@string/image"
                        android:layout_marginHorizontal="30dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="20dp"
                        android:alpha="0.5"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text2"
                        app:layout_constraintBottom_toTopOf="@id/condition"/>
                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_c"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="@id/iv_condition"
                        app:layout_constraintEnd_toEndOf="@id/iv_condition"
                        app:layout_constraintStart_toStartOf="@id/iv_condition"
                        app:layout_constraintBottom_toBottomOf="@id/iv_condition"
                        android:textSize="80sp"
                        />

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/condition"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        app:layout_constraintTop_toBottomOf="@id/iv_condition" />

                    <TextView
                        android:id="@+id/location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_name_country_name"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/condition" />

                    <TextView
                        android:id="@+id/temperatureMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/max_temp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@id/temperatureMin"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/location_name" />
                    <TextView
                        android:id="@+id/temperatureMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/min_temp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@id/temperatureMax"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/location_name" />

                    <TextView
                        android:id="@+id/windSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/windSpeed"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@id/humidity"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/temperatureMax" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@id/visibility"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/windSpeed" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/humidity"
                        app:layout_constraintStart_toEndOf="@id/windSpeed"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/temperatureMin" />
                    <TextView
                        android:id="@+id/visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/visibility"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@id/pressure"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/humidity" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/see_7day_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/location"
                    android:text="@string/see_7_day_report"
                    android:textColor="@color/white"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintBottom_toTopOf="@id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                    android:layout_marginEnd="20dp"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>