<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="180dp"
    android:layout_margin="3dp"
    app:cardCornerRadius="30dp"
    android:hapticFeedbackEnabled="true"
    android:layout_width="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:background="@drawable/cardview_bg" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_goneMarginEnd="5dp"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/iv_condition"
                    app:layout_constraintTop_toTopOf="@id/iv_condition" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/windSpeed"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_goneMarginEnd="5dp"
                    app:layout_constraintStart_toEndOf="@id/iv_condition"
                    app:layout_constraintTop_toBottomOf="@id/temperature" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_goneMarginEnd="5dp"
                    app:layout_constraintStart_toEndOf="@id/iv_condition"
                    app:layout_constraintTop_toBottomOf="@id/windSpeed" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/pressure"
                    app:layout_constraintHorizontal_bias="0"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_goneMarginEnd="5dp"
                    app:layout_constraintStart_toEndOf="@id/iv_condition"
                    app:layout_constraintTop_toBottomOf="@id/humidity" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/description"
                    app:layout_constraintHorizontal_bias="0"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_goneMarginEnd="5dp"
                    app:layout_constraintStart_toEndOf="@id/iv_condition"
                    app:layout_constraintTop_toBottomOf="@id/pressure" />
                <ImageView
                    android:id="@+id/iv_condition"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/image"
                    android:layout_margin="10dp"
                    app:layout_goneMarginEnd="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conditionInLocation"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/conditionInLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/condition_in_location"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/_23_34_12"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/conditionInLocation"
                    android:gravity="end"
                    android:textSize="20sp"
                    />


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>