<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:id="@+id/constraint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/cardview_bg">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image"
                app:layout_constraintHorizontal_bias="0.8"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@id/helloName"
                app:layout_constraintEnd_toStartOf="@+id/helloName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/helloName"
                android:src="@drawable/ic_pencil"/>

            <TextView
                android:id="@+id/helloName"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/hello_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/editYourName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/helloName"
                app:layout_constraintEnd_toEndOf="@id/helloName"
                app:layout_constraintTop_toTopOf="@id/helloName"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/helloName"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image"
                app:layout_constraintHorizontal_bias="0.2"
                android:scaleType="fitXY"
                android:visibility="gone"
                android:id="@+id/tick"
                app:layout_constraintBottom_toBottomOf="@id/helloName"
                app:layout_constraintStart_toEndOf="@id/helloName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/helloName"
                android:src="@drawable/ic_tick_box"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hope_so_you_are_doing_great"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_left"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint"
            android:layout_marginTop="35dp"
            android:backgroundTint="?attr/colorPrimaryDark"/>
        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintTop_toBottomOf="@id/constraint"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/backButton"/>
        <TextView
            android:id="@+id/control_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_unit"
            app:layout_constraintTop_toBottomOf="@id/setting"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/control_unit"
            app:layout_constraintTop_toTopOf="@id/control_unit"
            app:layout_constraintBottom_toBottomOf="@id/control_unit"
            android:layout_marginStart="10dp"
            android:text="@string/c"
            android:hapticFeedbackEnabled="true"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            app:layout_constraintStart_toEndOf="@id/c"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/control_unit"
            app:layout_constraintBottom_toBottomOf="@id/control_unit"
            />
        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/slash"
            app:layout_constraintTop_toTopOf="@id/control_unit"
            app:layout_constraintBottom_toBottomOf="@id/control_unit"
            android:layout_marginStart="10dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/f"
            android:textSize="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>